## Process this file with automake to produce Makefile.in

EXTRA_DIST = README

INCLUDES = -I$(top_srcdir)/intl

noinst_LIBRARIES = libjnlib.a


#libjnlib_a_LDFLAGS =
libjnlib_a_SOURCES = libjnlib-config.h	       \
		     xmalloc.c xmalloc.h       \
		     stringhelp.c stringhelp.h \
		     argparse.c argparse.h     \
		     logging.c logging.h       \
		     types.h mischelp.h



