# Makefile.am for GPGME-CL.
# Copyright (C) 2003, 2006 g10 Code GmbH
#
# This file is part of GPGME-CL.
#
# GPGME-CL is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# GPGME-CL is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA

clfiles = gpgme.asd gpgme-package.lisp gpgme.lisp

# FIXME: Should be configurable.
clfilesdir = $(datadir)/common-lisp/source/gpgme
dist_clfiles_DATA = $(clfiles)

EXTRA_DIST = README ChangeLog-2011
